# KFI

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: lib.rs  methods.rs  models.rs
kfi/: Cargo.toml
kfi/src/: main.rs
