[workspace]
resolver = "3"
members = [
    "cli",
    "kfi",
]
default-members = ["kfi"]

[workspace.package]
version = "0.0.1"
authors = ["Thi100 <thiagocas100@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/THI100/KFI"

[workspace.dependencies]

# ---------- Optimizations ---------- #

[profile.dev]
opt-level = 0      # Optimization
debug = true

# cargo build --release (Production)
[profile.release]
opt-level = 3      # Optimization
lto = true         # Link-Time Optimization
codegen-units = 1  # Optimization+
panic = "abort"
